manifests/overlays/staging/class-management-auth-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: class-management-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-auth-service
  template:
    metadata:
      labels:
        app: class-management-auth-service
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-auth-service-container
          image: busybox # {"$imagepolicy": "staging:auth-service-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3077
