manifests/overlays/staging/class-management-auth-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
spec:
  rules:
  - host: stag-auth-api.th1enlm02.live
